--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,7 +1,7 @@
-.notfound {
+.not-found {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height:100vh;
+  min-height: 100vh;
 }
