--- a/src/components/FailureView/index.css
+++ b/src/components/FailureView/index.css
@@ -1,4 +1,4 @@
-.retry {
+.retry-button {
   color: white;
   background-color: #6366f1;
   padding: 10px;
@@ -7,11 +7,17 @@
   min-width: 75px;
   text-align: center;
 }
-.failureView {
-  margin: auto;
+.failure-div {
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
-.retryDiv {
+.retry-div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
