--- a/src/components/JobItem/index.css
+++ b/src/components/JobItem/index.css
@@ -1,44 +1,65 @@
-.job {
-  background-color: #2c364c;
+.link-style {
+  text-decoration: none;
+  text-decoration-color: none;
+  padding: 0px;
+}
+
+.job-item-list-item {
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.job-item-div {
+  background-color: #272727;
   max-width: 70vw;
   border-radius: 10px;
-  padding: 15px;
-  margin: 10px;
+  padding: 20px;
 }
 
-.companyLogo {
-  height: 80px;
-  padding: 10px;
-}
-
-.flexTitle {
+.flex-title {
   display: flex;
   flex-direction: row;
   padding: 10px;
 }
 
-.details {
-  display: flex;
-  flex-direction: row;
-  width: 15vw;
-  justify-content: space-between;
+.job-item-company-logo {
+  height: 90px;
+  padding: 10px;
+  margin-right: 5px;
 }
-
-.flexDetails {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.flexRow {
+.location {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
-.icon {
-  margin-top: 15px;
-  margin-right: 5px;
+.job-type {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.link {
-  color: white;
+.icon {
+  margin-right: 5px;
+}
+.flex-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.job-and-location {
+  display: flex;
+  flex-direction: row;
+  min-width: 20vw;
+  justify-content: space-around;
+}
+
+.description {
+  line-height: 1.6;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
 }
