--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -1,57 +1,97 @@
-.jobItemDetails {
-  background-color: #2c364c;
-  max-width: 100vw;
-  color: white;
-  padding:20px
+.job-details-bg {
+  background-color: #272727;
+  padding: 50px;
+  min-height: 100vh;
+  margin: 50px;
 }
 
-.companyLogo {
+.job-item-details-div {
+  background-color: black;
+  max-width: 100vw;
+  min-height: 100vh;
+  color: white;
+  padding-bottom: 50px;
+}
+
+.company-logo {
   height: 80px;
   padding: 10px;
 }
 
-.flexTitle {
+.flex-title {
   display: flex;
   flex-direction: row;
   padding: 10px;
 }
 
-.details {
+.job-and-location {
   display: flex;
   flex-direction: row;
-  width: 15vw;
+  max-width: 20vw;
+  justify-content: space-around;
+}
+
+.location {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.job-type {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.flex-details {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.flexDetails {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.listRow {
+.list-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
-.listItem {
+.list-item {
   width: 20vw;
   margin: 20px;
 }
 
-.descriptionHead {
+.description-head {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.hyperlink {
+.company-hyperlink {
   margin-top: 22px;
   color: white;
+  text-decoration-color: transparent;
 }
-.similarjobs {
+.similar-jobs {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
+
+.icon {
+  margin-right: 5px;
+}
+
+.para-line {
+  line-height: 1.6;
+}
+
+.job-details-heading {
+  font-size: 25px;
+}
+.details-loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+
