--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,14 +1,15 @@
-.flexCol {
+.input-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-  width: 20vw;
-  padding: 20px;
+  width: 10vw;
+  margin-bottom: 30px;
 }
 
-.logoDiv {
+.logo-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,11 +26,13 @@
   color: white;
 }
 
-input {
+.cred-input {
   background-color: transparent;
   height: 35px;
+  width: 20vw;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
   border-width: 2px;
   border-color: #64748b;
   border-radius: 5px;
@@ -37,24 +40,39 @@ input {
   color: white;
 }
 
-.loginButton {
-  margin: auto;
-  width: 100px;
+.login-button {
+  width: 20vw;
+  height: 30px;
+  background-color: #4f46e5;
+  color: white;
+  border-radius: 5px;
+  border: 0px;
 }
 
-.loginDiv {
+.login-div {
   display: flex;
   flex-direction: column;
-  width: 30vw;
+  width: 25vw;
   background-color: #272727;
   padding: 30px;
   border-radius: 5px;
 }
 
-.hideErrorMessage {
+.hide-error-message {
   display: none;
 }
-.errorMessage {
+.error-message {
   display: inline;
   color: red;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.input-label {
+  font-weight: bold;
+  font-size: 14px;
 }
