--- a/src/components/FailureView/index.css
+++ b/src/components/FailureView/index.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   height: 80vh;
-  width: 100vw;
+  min-width: 70vw;
   justify-content: center;
   align-items: center;
 }
@@ -19,5 +19,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
 }
