--- a/src/components/JobItem/index.css
+++ b/src/components/JobItem/index.css
@@ -12,9 +12,9 @@
 
 .job-item-div {
   background-color: #272727;
-  max-width: 70vw;
   border-radius: 10px;
   padding: 20px;
+  max-width: 70vw;
 }
 
 .flex-title {
@@ -40,7 +40,7 @@
 }
 
 .icon {
-  margin-right: 5px;
+  margin-top: 5px;
 }
 .flex-details {
   display: flex;
@@ -62,4 +62,10 @@
 .flex-row {
   display: flex;
   flex-direction: row;
+}
+
+@media screen and (max-width: 991px) {
+  .job-item-div {
+    max-width: 90vw;
+  }
 }
